# VoterFE

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/: app.html  styles.css
src/lib/: api.ts  format.ts  simulation-context.ts  types.ts
src/pages/: DashboardPage.svelte  MediaPage.svelte  ModelPage.svelte  PoliticsPage.svelte  PopulationPage.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/media/: +page.svelte
src/routes/model/: +page.svelte
src/routes/politics/: +page.svelte
voternn1/: API.md  CMakeLists.txt  LICENSE  LLMAPI.md  README.md  clang-format  docconf  package-lock.json  schema.txt  visual_district_helper.html  voter_profiles_6100.csv
voternn1/depend/: README.md
voternn1/src/: application.cpp  include.hpp
voternn1/src/callbacks/: callbacks.cpp  callbacks.hpp
voternn1/src/simulation/: simulation.cpp  simulation.hpp
voternn1/src/system/: electoral.cpp  electoral.hpp  parliament_config.hpp
voternn1/src/types/: company.cpp  company.hpp  district.cpp  district.hpp  grid.cpp  grid.hpp  law.cpp  law.hpp  media.cpp  media.hpp  opinion.cpp  opinion.hpp  parliament.hpp  party.hpp  product.cpp  product.hpp  voter.cpp  voter.hpp
voternn1/src/ui/: uimgr.cpp  uimgr.hpp
voternn1/src/util/: file.cpp  file.hpp  init.cpp  init.hpp  math.cpp  math.hpp  voter_profiles_loader.cpp  voter_profiles_loader.hpp
voternn1/src/util/llm/: llmapi.cpp  llmapi.hpp
voternn1/src/util/socket/: listener.cpp  listener.hpp  listener_types.cpp  listener_types.hpp
(+1 files in other folders)
